--- a/src/app/components/list/list.component.html
+++ b/src/app/components/list/list.component.html
@@ -1,14 +1,52 @@
 <mat-toolbar color="primary">
-  <span>Tarefas</span>
+  <span>
+    Tarefas
+  </span>
 </mat-toolbar>
-<mat-selection-list #task>
-  <ng-container *ngFor="let task of tasks">
-    <mat-list-option>
-      {{ task.title }}
-    </mat-list-option>
-  </ng-container>
-</mat-selection-list>
-<mat-divider></mat-divider>
-<ng-container *ngIf="tasks === []">
-  <p>Parabéns, não tem mais tarefas!</p>
-</ng-container>
+<mat-card>
+  <mat-form-field class="form-field">
+    <mat-label>Filter</mat-label>
+    <input matInput (keyup)="applyFilter($event)" placeholder="Ex. task" #input>
+  </mat-form-field>
+
+  <div class="mat-elevation-z8">
+    <mat-table [dataSource]="dataSource" matSort>
+
+      <!-- ID Column -->
+      <ng-container matColumnDef="id">
+        <mat-header-cell *matHeaderCellDef mat-sort-header> ID </mat-header-cell>
+        <mat-cell *matCellDef="let row"> {{row.id}} </mat-cell>
+      </ng-container>
+
+      <!-- Title Column -->
+      <ng-container matColumnDef="title">
+        <mat-header-cell *matHeaderCellDef mat-sort-header> Title </mat-header-cell>
+        <mat-cell *matCellDef="let row"> {{row.title}} </mat-cell>
+      </ng-container>
+
+      <!-- Actions Column -->
+      <ng-container matColumnDef="actions">
+        <mat-header-cell *matHeaderCellDef mat-sort-header> Actions </mat-header-cell>
+        <mat-cell *matCellDef="let row">
+          <mat-checkbox>Done</mat-checkbox>
+          <button mat-icon-button>
+            <mat-icon class="mat-18">delete</mat-icon>
+          </button>
+        </mat-cell>
+      </ng-container>
+
+
+      <mat-header-row *matHeaderRowDef="displayedColumns">
+      </mat-header-row>
+      <mat-row *matRowDef="let row; columns: displayedColumns;">
+      </mat-row>
+
+      <!-- Row shown when there is no matching data. -->
+      <tr class="mat-row" *matNoDataRow>
+        <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
+      </tr>
+    </mat-table>
+
+    <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of users"></mat-paginator>
+  </div>
+</mat-card>
